# DefaultApplication

./: .gitignore  AGENTS.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
scripts/: convert_icon.py  prepare-dev.sh
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/entitlements/: macos.plist
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs  platform.rs
styles/: app.css
