[package]
name = "DefaultApplication"
version = "0.1.0"
edition = "2021"
description = "Default application manager"

[dependencies]
plist = "1.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.0.0", features = ["macos-private-api"] }
tauri-plugin-dialog = "2.0.0"
thiserror = "1.0"
url = "2.5"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }
